working mini table

--- a/index.html
+++ b/index.html
@@ -46,7 +46,45 @@
     </div>
 
     <div class="container table-responsive">
-        <table class="table table-hover table-striped-columns">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">Serial</th>
+                    <th scope="col">Code</th>
+                    <th scope="col">Subject</th>
+                    <th scope="col">Credit</th>
+                    <th scope="col">GP</th>
+                    <th scope="col">LG</th>
+                    <th scope="col">GPA</th>
+                    <th scope="col">PGPA</th>
+                    <th scope="col">PCCH</th>
+                    <th scope="col">CGPA</th>
+                    <th scope="col">CCH</th>
+                    <th scope="col">Remarks</th>
+                </tr>
+            </thead>
+            <tbody id="VarTable">
+
+            </tbody>
+        </table>
+    </div>
+
+    <!-- 
+        ___                _   
+        /'___)_             ( )_ 
+       | (__ (_) _ __   ___ | ,_)
+       | ,__)| |( '__)/',__)| |  
+       | |   | || |   \__, \| |_ 
+       (_)   (_)(_)   (____/`\__)
+       previous one
+                                  -->
+
+    <div class="container">
+        <h2 id="firstSem">First semester</h2>
+    </div>
+
+    <div class="container table-responsive">
+        <table class="table table-hover">
             <thead>
                 <tr>
                     <th scope="col">Serial</th>
@@ -243,7 +281,7 @@ ___    __     ___    _     ___     _| |
                     <td id="LG21">0</td>
                     <td id="GPA2" rowspan="100">0</td>
                     <!-- <td id="PGPA2" rowspan="100">0</td> -->
-                    <td>
+                    <td rowspan="100">
                         <div class="row g-3 align-items-center">
                             <input type="text" class="form-control" placeholder="0" id="PGPA2">
                         </div>
