--- a/index.html
+++ b/index.html
@@ -165,33 +165,25 @@ _______   _____/ ____\___________   ____   ____   ____  ____
                 <h3
                     class="text-center d-flex justify-content-center align-items-center flex-column flex-md-row flex-lg-column">
                     <span>Grade point (GP)</span>
-                </h3>
-                <h3
-                    class="text-center d-flex justify-content-center align-items-center flex-column flex-md-row flex-lg-column">
                     <span>Letter grade (LG)</span>
-                </h3>
-                <h3
-                    class="text-center d-flex justify-content-center align-items-center flex-column flex-md-row flex-lg-column">
-                    <span>Grade point average (GPA)</span>
-                    <span class="badge bg-success">GPA = Σ(Ci * Gi) / ΣCi</span>
-                </h3>
-                <h3
-                    class="text-center d-flex justify-content-center align-items-center flex-column flex-md-row flex-lg-column">
-                    <span>Previous cumulative grade point average (PCGPA)</span>
-                </h3>
-                <h3
-                    class="text-center d-flex justify-content-center align-items-center flex-column flex-md-row flex-lg-column">
-                    <span>Previous course credit hour (PCCH)</span>
-                </h3>
-                <h3
-                    class="text-center d-flex justify-content-center align-items-center flex-column flex-md-row flex-lg-column">
-                    <span>Cumulative grade point average (CGPA)</span>
-                    <span class="badge bg-success">CGPA = Σ(Ci * Gi) + (PCGPA * PCCH) / (ΣCi + PCCH)</span>
+                    <span>Credit per hour (C)</span>
                 </h3>
                 <h3
                     class="text-center d-flex justify-content-center align-items-center flex-column flex-md-row flex-lg-column">
                     <span>Course credit hour (CCH)</span>
                     <span class="badge bg-success">CCH = ΣCi</span>
+                </h3>
+                <h3
+                    class="text-center d-flex justify-content-center align-items-center flex-column flex-md-row flex-lg-column">
+                    <span>Grade point average (GPA)</span>
+                    <span class="badge bg-success">GPA = Σ(Ci * GPi) / ΣCi</span>
+                </h3>
+                <h3
+                    class="text-center d-flex justify-content-center align-items-center flex-column flex-md-row flex-lg-column">
+                    <span>Cumulative grade point average (CGPA)</span>
+                    <span>Previous CGPA (PCGPA)</span>
+                    <span>Previous course credit hour (PCCH)</span>
+                    <span class="badge bg-success">CGPA = (Σ(Ci * GPi) + (PCGPA * PCCH)) / (ΣCi + PCCH)</span>
                 </h3>
             </div>
         </div>
